@@ -1,3 +1,5 @@
+
+- implemented conjunctions with '&' (not in Regex yet)
 - implemented negated metasyntax <!...>
 
 0.20  2006-10-13
